--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -55,9 +55,10 @@
       .antialiased{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}
       .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
       .focus\:not-sr-only:focus{position:static;width:auto;height:auto;padding:inherit;margin:inherit;overflow:visible;clip:auto;white-space:normal}
-      .hero-bg{background-image:url('https://res.cloudinary.com/ds4dhbneq/image/upload/w_640,h_1136,c_fill,q_auto,f_auto,g_auto,dpr_auto/cafe_pnkngz')}
-      @media(min-width:640px){.hero-bg{background-image:url('https://res.cloudinary.com/ds4dhbneq/image/upload/w_1024,h_768,c_fill,q_auto,f_auto,g_auto,dpr_auto/cafe_pnkngz')}}
-      @media(min-width:1024px){.hero-bg{background-image:url('https://res.cloudinary.com/ds4dhbneq/image/upload/w_1920,h_1080,c_fill,q_auto,f_auto,g_auto,dpr_auto/cafe_pnkngz')}}
+      .hero-bg{background-image:url('https://res.cloudinary.com/ds4dhbneq/image/upload/w_640,h_1136,c_fill,q_auto:eco,f_auto,g_auto,dpr_auto,fl_progressive/cafe_pnkngz')}
+      @media(min-width:640px){.hero-bg{background-image:url('https://res.cloudinary.com/ds4dhbneq/image/upload/w_1024,h_768,c_fill,q_auto:good,f_auto,g_auto,dpr_auto,fl_progressive/cafe_pnkngz')}}
+      @media(min-width:1024px){.hero-bg{background-image:url('https://res.cloudinary.com/ds4dhbneq/image/upload/w_1536,h_864,c_fill,q_auto:best,f_auto,g_auto,dpr_auto,fl_progressive/cafe_pnkngz')}}
+      @media(min-width:1536px){.hero-bg{background-image:url('https://res.cloudinary.com/ds4dhbneq/image/upload/w_1920,h_1080,c_fill,q_auto:best,f_auto,g_auto,dpr_auto,fl_progressive/cafe_pnkngz')}}
     </style>
     
     <!-- Main CSS processed by Vite with Tailwind v4 -->
